# chip8-emu

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h  init.h
src/: chip8.c  init.c  main.c
